--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,7 @@ android {
 
 dependencies {
 
-    testImplementation "org.mockito:mockito-core:4.10.0"
-    testImplementation "org.mockito:mockito-inline:4.10.0"
 
-    testImplementation "androidx.arch.core:core-testing:2.2.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
-    testImplementation "com.google.truth:truth:1.1.3"
 
     // room!
     implementation 'androidx.room:room-runtime:2.5.1'
@@ -121,7 +116,31 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    testImplementation "org.mockito:mockito-core:4.10.0"
+    testImplementation "org.mockito:mockito-inline:4.10.0"
+
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "com.google.truth:truth:1.1.3"
+
+    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation "androidx.test:core:1.3.0"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.2"
+
+
+//    debugImplementation "androidx.fragment:fragment-testing:1.5.5"
+
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+
+    debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0-alpha04")
+    debugImplementation("androidx.fragment:fragment-testing:1.6.0-alpha04")
 }
