--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
   instrumentation-test:
     needs: [unit-test]
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
