--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,20 +27,17 @@ jobs:
     needs: [unit-test]
     runs-on: macos-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout the code
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Run espresso tests
+        uses: reactivecircus/android-emulator-runner@v2
         with:
-          java-version: 11
-          distribution: 'adopt'
-          cache: 'gradle'
-        
-      - name: Run connected tests
-        uses: ReactiveCircus/android-emulator-runner@v2
-        with:
-          api-level: 28
-          target: default
-          arch: x86_64
+          api-level: 29
           script: ./gradlew connectedCheck
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v2
+        with:
+          name: instrumentation_test_report
+          path: app/build/reports/androidTests/connected/
