--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,19 +26,26 @@ jobs:
   instrumentation-test:
     needs: [unit-test]
     runs-on: macos-latest
-    strategy:
-      matrix:
-        api-level: [21, 23, 29]
-        target: [default, google_apis]
+    #1
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
+      - name: Checkout the code
+        uses: actions/checkout@v2.6.0
 
-      - name: run tests
+      - name: Setup JAVA 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: 11
+      - name: Cache Gradle and wrapper
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+      #2
+      - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ matrix.api-level }}
-          target: ${{ matrix.target }}
-          arch: x86_64
-          profile: Nexus 6
-          script: ./gradlew connectedCheck
+          api-level: 29
+          script: ./gradlew connectedAndroidTest
