--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,9 @@ jobs:
   build-and-test:
     # These next lines define the Android machine image executor.
     # See: https://circleci.com/docs/executor-types/
-    executor:
-      name: android/android-machine
+    docker:
+    # Primary container image where all steps run
+     - image: cimg/android:2023.08
 
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
