--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,11 @@ jobs:
      - image: cimg/android:2023.08
     steps:
       - checkout
-      - run: echo "gem install bundler"
-      - run: echo "bundle install"
-      - run: echo "java -version"
+      - run:
+          command:
+             gem install bundler
+             bundle install
+             java -version
   
   Internal test:
     docker:
@@ -33,8 +35,10 @@ jobs:
     docker:
      - image: cimg/android:2023.08
     steps:
-      - run: echo "$GOOGLE_SERVICE_BASE64 | base64 --decode > google-services.json"
-      - run: echo "bundle exec fastlane build BUILD_VARIANT:debug"
+      - run: 
+          command:
+            $GOOGLE_SERVICE_BASE64 | base64 --decode > google-services.json
+            bundle exec fastlane build BUILD_VARIANT:debug
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
