--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,9 @@ jobs:
      - image: cimg/android:2023.08
     steps:
       - checkout
-      - run:
-          command:
-             gem install bundler
-             bundle install
-             java -version
+      - run: gem install bundler
+      - run: bundle install
+      - run: java -version
   
   Internal test:
     docker:
@@ -35,10 +33,8 @@ jobs:
     docker:
      - image: cimg/android:2023.08
     steps:
-      - run: 
-          command:
-            $GOOGLE_SERVICE_BASE64 | base64 --decode > google-services.json
-            bundle exec fastlane build BUILD_VARIANT:debug
+      - run: $GOOGLE_SERVICE_BASE64 | base64 --decode > google-services.json
+      - run: bundle exec fastlane build BUILD_VARIANT:debug
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
