--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run:
           command: |
             echo $GOOGLE_SERVICE_BASE64
-            base64 --decode > google-services.json
+            base64 --decode > encoded-20230824031817.txt
             bundle exec fastlane build BUILD_VARIANT:debug
 
 # Invoke jobs via workflows
